--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "install": "npm install",
-    "postinstall": "npm run build && npm run lint",
-    "dev-docker": "npm run dev -- --hostname 0.0.0.0"
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "14.0.0",
