--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,5 @@
   "buildCommand": "npm run build",
   "outputDirectory": ".next",
   "framework": "nextjs",
-  "installCommand": "npm ci --prefer-offline --no-audit"
+  "installCommand": "npm install"
 } 
